styles.css
/*
 * $Id$
 * Copyright 2004,2005 - Michael Sinz
 */

@import url(frame/style.css);
@import url(gauge/style.css);
@import url(innerframe/frame.css);
@import url(innerframe/table.css);
@import url(boldframe/frame.css);

html, body
{
  font-family: helvetica, ariel, sansserif;
  font-size: 10pt;
  text-align: center;
  background-image: url('./PoweredByInsurrection.gif');
  background-position: bottom center;
  background-repeat: no-repeat;
}

img { border: none; }

a {color: blue; text-decoration: none;}
a:visited {color: blue; text-decoration: none;}
a:hover {color: green; text-decoration: underline;}
a:active {color: red; text-decoration: underline;}

#pagetable
{
  text-align: left;
  margin-left: auto;
  margin-right: auto;
}

#content
{
  /* Remove the width style if you want it to be more dynamic */
  width: 672px;
  color: black;
  background: white;
}

.versiontable th
{
  background-color: rgb(182,38,133);
  color: white;
  border-right: 1px black dotted;
  border-bottom: 1px black dotted;
  padding-left: 1em;
  padding-top: 2px;
}

.versiontable td
{
  font-size: 90%;
  border-right: 1px gray dotted;
  border-bottom: 1px gray dotted;
}

.accesstable
{
  border: 3px black solid;
  border-left: 2px black solid;
  font-size: 11pt;
}

.accesstable th
{
  background-color: rgb(182,38,133);
  color: white;
  padding-left: 4px;
  padding-right: 4px;
  padding-bottom: 2px;
  font-weight: bold;
  text-align: center;
  border: 0px;
  border-left: 1px black solid;
}

.accesstable td
{
  border: 1px black solid;
  border-bottom: 0px;
  border-right: 0px;
}

#versions
{
  color: rgb(182,38,133);
  font-family: helvetica, ariel, sansserif;
  font-style: normal;
  font-weight: normal;
  font-size: 8pt;
  padding: 0px;
  margin: 0px;
  border: 0px;
}

#versions th
{
  border: 0px;
  padding: 2px;
  background-color: transparent;
  text-align: left;
}

#versions td
{
  border: 0px;
  padding: 0px;
  background-color: transparent;
  text-align: right;
}

.accesstitles
{
  font-weight: normal;
  font-size: 8pt;
}

.accessinfo
{
  border: 2px black solid;
  border-top: 0px;
  border-left: 1px black solid;
  width: 100%;
  font-size: 9pt;
}

.accessinfo th
{
  background-color: rgb(182,38,133);
  color: white;
  padding-left: 4px;
  padding-right: 4px;
  padding-bottom: 2px;
  font-weight: bold;
  text-align: center;
  border: 0px;
  border-left: 1px black solid;
  border-top: 2px black solid;
}

.accessinfo td
{
  background-color: transparent;
  color: black;
  border-top: 1px gray solid;
  border-left: 1px black solid;
  border-bottom: 0px;
  border-right: 0px;
  padding-left: 4px;
  padding-right: 4px;
}

.accessinfototal th
{
  text-align: left;
}

.accessinfototal td
{
  text-align: right;
  font-weight: bold;
  background-color: rgb(95%,80%,85%);
}

.accessadmin
{
  color: yellow;
}



.bandwidth
{
  margin-top: 2px;
  text-align: center;
  font-size: 9pt;
}

.bandwidthheader1
{
  font-weight: bold;
  font-size: 16pt;
}

.bandwidthheader2
{
  padding-bottom: 4px;
  font-size: 12pt;
}

.bandwidthdata
{
  margin-left: auto;
  margin-right: auto;
  border: 2px black solid;
  border-top: 1px black solid;
  border-left: 1px black solid;
  font-size: 9pt;
}

.bandwidthdata td, .bandwidthdata th
{
  border-left: 1px black solid;
  border-top: 1px black solid;

  padding-left: 0.5em;
  padding-right: 0.5em;
}

.bandwidthdata td
{
  text-align: right;
}

.bandwidthdata th
{
  text-align: left;
}

.bandwidthfooter
{
  padding: 9px;
}

.bandwidthtitles th, .bandwidthtitles td
{
  background-color: rgb(182,38,133);
  color: white;
  text-align: center;
}

.bandwidthtotal
{
  font-weight: bold;
  background-color: rgb(95%,80%,85%);
}

.bandwidthtotal th
{
  text-align: left;
}



.versiontable li
{
  margin-left: -0.25in;
}

.footer
{
  padding: 0.5em 1em 0.5em 1em;
  background: rgb(88%,90%,92%);
  font-size: 80%;
  text-align: right;
  white-space: nowrap;
  background-image: url('./PoweredByInsurrection.gif');
  background-position: center left;
  background-repeat: no-repeat;
}

.svn
{
  margin-top: 0.3em;
  margin-bottom: 0.3em;
  padding-top: 0.3em;
  padding-bottom: 0.3em;
  border-top: 1px black solid;
  border-bottom: 1px black solid;
}

#localbanner
{
  margin: 0.3em;
  padding: 0.5em;
  border: 1px rgb(20%,20%,20%) solid;
  color: rgb(20%,20%,20%);
  background: rgb(95%,95%,95%);
  display: none;
  overflow: auto;
}

.rev
{
  padding-right: 5px;
  text-align: right;
}

.updirrow
{
  padding: 0px;
  background: rgb(100%,90%,70%);
}

.updir
{
  padding: 2px;
}

.pathrow
{
  padding: 0px;
  background: rgb(100%,80%,40%);
}

.pathrow td
{
  border-top: 1px rgb(90%,70%,30%) solid;
}

.path
{
  padding: 2px;
}

.path a, .path a:visited
{
  color: black;
  text-decoration: none;
  padding-left: 0.1em;
  padding-right: 0.1em;
}

.path a:hover, .path a:active
{
  background: rgb(100%,100%,0%);
  text-decoration: none;
  font-weight: bold;
  padding-left: 0.5em;
  padding-right: 0.5em;
}

.path a:active
{
  background: rgb(0%,100%,0%);
}

.svnentryicon
{
  margin-right: 0.5em;
}

.dirrow
{
  padding: 0px;
  background: rgb(80%,80%,70%);
}

.dirrow td
{
  border-top: 1px rgb(70%,70%,60%) solid;
}

.dir
{
  padding: 2px;
}

.filerow
{
  padding: 0px;
  background: rgb(95%,95%,95%);
}

.filerow td
{
  border-top: 1px rgb(85%,85%,85%) solid;
}

.file
{
  padding: 2px;
}

.showlog
{
  padding: 0px;
  padding-left: 1px;
  padding-right: 1px;
  opacity: 0.6;
}

td.showlog
{
  width: 1%;
}

.foldspace
{
  width: 1%;
  padding: 0px;
}

.dirarrow, .editable, .logheader, .blameline0, .blameline1, tr.revision
{
  cursor: pointer;
}

.updir:hover
{
  background: rgb(100%,90%,90%);
}

.dir:hover
{
  background: rgb(100%,100%,80%);
}

.file:hover
{
  background: rgb(100%,100%,90%);
}

.dirarrow:hover, .showlog a:hover, .showlog:hover
{
  background: rgb(100%,100%,50%);
  opacity: 1.00;
}

.editable:hover
{
  background: yellow;
}

.example
{
  margin-left: 2em;
}

.commandLine
{
}
/* ... */

